--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* body{
+  background-color: aliceblue;
+} */
+
 .App {
   text-align: center;
 }
@@ -21,7 +25,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(111, 27, 27);
 }
 
 .App-link {
